# Azure_postgre_sqlalchemy

./: .gitignore  README.md  pyproject.toml
archi_basic/: queries.py  script_sqlalchemy.py
archi_complex/: models.py
json/: parameters.json
